# taas-experiment

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.ps1  ctrl.sh  errors.toml  go.mod  go.sum  pd.code-workspace  tools.go
bench/: bench_cfg.yaml  ctrl
taas-proto/taasplugin/: Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  tools.go  tsopb.proto
taas-proto/taasplugin/cpp/: CMakeLists.txt
taas-proto/taasplugin/pdpb/: pdpb.pb.go
taas-proto/taasplugin/pkg/autoid/: autoid.pb.go
taas-proto/taasplugin/pkg/brpb/: brpb.pb.go
taas-proto/taasplugin/pkg/cdcpb/: cdcpb.pb.go
taas-proto/taasplugin/pkg/configpb/: configpb.pb.go  configpb.pb.gw.go
taas-proto/taasplugin/pkg/coprocessor/: coprocessor.pb.go
taas-proto/taasplugin/pkg/deadlock/: deadlock.pb.go
taas-proto/taasplugin/pkg/debugpb/: debugpb.pb.go
taas-proto/taasplugin/pkg/diagnosticspb/: diagnosticspb.pb.go
taas-proto/taasplugin/pkg/disaggregated/: disaggregated.pb.go
taas-proto/taasplugin/pkg/disk_usage/: disk_usage.pb.go
taas-proto/taasplugin/pkg/encryptionpb/: encryptionpb.pb.go
taas-proto/taasplugin/pkg/enginepb/: enginepb.pb.go
taas-proto/taasplugin/proto/: autoid.proto  brpb.proto  cdcpb.proto  disaggregated.proto  errorpb.proto  import_sstpb.proto  keyspacepb.proto  kvrpcpb.proto  mpp.proto  pdpb.proto  raft_cmdpb.proto  raft_serverpb.proto  resource_manager.proto  tikvpb.proto  tsopb.proto
taas-proto/taasplugin/scripts/: check.sh  docker-build.sh  docker-run.sh  generate_cpp.sh  generate_go.sh
taas-proto/taasplugin/tsopb/: tsopb.pb.go
(+780 files in other folders)
